RESOLVED FIXED181817
REGRESSION (r221092): Swipe actions are hard to perform in FastMail app
https://bugs.webkit.org/show_bug.cgi?id=181817
Summary REGRESSION (r221092): Swipe actions are hard to perform in FastMail app
Dean Jackson
Reported 2018-01-18 15:54:56 PST
[iOS] Allow older apps to retain non-passive touch listeners by default
Attachments
Patch (7.39 KB, patch)
2018-01-18 15:59 PST, Dean Jackson
no flags
Patch (18.18 KB, patch)
2018-01-19 13:16 PST, Dean Jackson
no flags
Patch (18.20 KB, patch)
2018-01-19 13:27 PST, Dean Jackson
simon.fraser: review+
Dean Jackson
Comment 1 2018-01-18 15:56:45 PST
Dean Jackson
Comment 2 2018-01-18 15:59:08 PST
Simon Fraser (smfr)
Comment 3 2018-01-18 16:08:08 PST
Comment on attachment 331667 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=331667&action=review > Source/WebCore/page/SettingsBase.cpp:349 > + return dyld_get_program_sdk_version() > DYLD_IOS_VERSION_11_2; It's not clear that this tests the UI process.
Dean Jackson
Comment 4 2018-01-18 16:13:49 PST
Comment on attachment 331667 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=331667&action=review >> Source/WebCore/page/SettingsBase.cpp:349 >> + return dyld_get_program_sdk_version() > DYLD_IOS_VERSION_11_2; > > It's not clear that this tests the UI process. It doesn't. I'll need to plumb it through from WebKit.
Dean Jackson
Comment 5 2018-01-19 13:16:11 PST
Dean Jackson
Comment 6 2018-01-19 13:27:24 PST
Dean Jackson
Comment 7 2018-01-19 14:53:33 PST
Note You need to log in before you can comment on or make changes to this bug.