Source/WebCore/dom/EventTarget.cpp
@@ -39,6 +39,7 @@
 #include "JSEventListener.h"
 #include "ScriptController.h"
 #include "ScriptDisallowedScope.h"
+#include "Settings.h"
 #include "WebKitAnimationEvent.h"
 #include "WebKitTransitionEvent.h"
 #include <wtf/MainThread.h>
@@ -62,12 +63,14 @@ bool EventTarget::addEventListener(const AtomicString& eventType, Ref<EventListe
     auto passive = options.passive;
 
     if (!passive.has_value() && eventNames().isTouchScrollBlockingEventType(eventType)) {
-        if (is<DOMWindow>(*this))
-            passive = true;
-        else if (is<Node>(*this)) {
+        if (is<DOMWindow>(*this)) {
+            auto& window = downcast<DOMWindow>(*this);
+            if (auto* document = window.document())
+                passive = document->settings().passiveTouchListenersAsDefaultOnDocument();
+        } else if (is<Node>(*this)) {
             auto& node = downcast<Node>(*this);
             if (is<Document>(node) || node.document().documentElement() == &node || node.document().body() == &node)
-                passive = true;
+                passive = node.document().settings().passiveTouchListenersAsDefaultOnDocument();
         }
     }
 
